@@ -26,6 +26,8 @@ Revision history for DBIx::Class
           during upgrades at the turn of the second
         - Fix incorrect bind of integers >= 2^^32 (bigint columns) to
           SQL_INTEGER, resulting in silent conversion to '-1'
+        - Fix pre 5.10 failures of t/55namespaces_cleaned.t due to buggy
+          require() (RT#68814)
 
 0.08192 2011-05-10 04:20 (UTC)
     * Fixes
